// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties CreateTeamDialog isOpen 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          CreateTeamDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          isOpen
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg create-team-modal"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  en_CA: Create a Team
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className=""
                >
                  <div
                    className="sc-iwsKbI fzrLKt"
                  >
                    <p>
                      en_CA: What is a team
                    </p>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameEn"
                      >
                        Team Name
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            EN
                          </span>
                        </div>
                        <input
                          aria-label="Enter team name"
                          className="form-control"
                          id="nameEn"
                          onChange={[Function]}
                          placeholder="Enter team name"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameFr"
                      >
                        Titre d'équipe
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            FR
                          </span>
                        </div>
                        <input
                          aria-label="Entrez titre d\\\\'\\\\u00E9quipe"
                          className="form-control"
                          id="nameFr"
                          onChange={[Function]}
                          placeholder="Entrez titre d'équipe"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionEn"
                      >
                        Description (English)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionEn"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="Describe your team..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionFr"
                      >
                        La description (Français)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionFr"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="d'écris ton équipe..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Save
                </button>
                <button
                  aria-label={null}
                  className="btn btn-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LocalizedCreateTeamDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onSave
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onSave
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onCancel
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onCancel
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties CreateTeamDialog onCancel 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          CreateTeamDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          onCancel
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg create-team-modal"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  en_CA: Create a Team
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className=""
                >
                  <div
                    className="sc-iwsKbI fzrLKt"
                  >
                    <p>
                      en_CA: What is a team
                    </p>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameEn"
                      >
                        Team Name
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            EN
                          </span>
                        </div>
                        <input
                          aria-label="Enter team name"
                          className="form-control"
                          id="nameEn"
                          onChange={[Function]}
                          placeholder="Enter team name"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameFr"
                      >
                        Titre d'équipe
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            FR
                          </span>
                        </div>
                        <input
                          aria-label="Entrez titre d\\\\'\\\\u00E9quipe"
                          className="form-control"
                          id="nameFr"
                          onChange={[Function]}
                          placeholder="Entrez titre d'équipe"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionEn"
                      >
                        Description (English)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionEn"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="Describe your team..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionFr"
                      >
                        La description (Français)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionFr"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="d'écris ton équipe..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Save
                </button>
                <button
                  aria-label={null}
                  className="btn btn-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LocalizedCreateTeamDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onSave
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onSave
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onCancel
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onCancel
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties CreateTeamDialog onSave 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          CreateTeamDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          onSave
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog modal-lg create-team-modal"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  en_CA: Create a Team
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <form
                  className=""
                >
                  <div
                    className="sc-iwsKbI fzrLKt"
                  >
                    <p>
                      en_CA: What is a team
                    </p>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameEn"
                      >
                        Team Name
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            EN
                          </span>
                        </div>
                        <input
                          aria-label="Enter team name"
                          className="form-control"
                          id="nameEn"
                          onChange={[Function]}
                          placeholder="Enter team name"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="nameFr"
                      >
                        Titre d'équipe
                      </label>
                      <div
                        className="input-group"
                      >
                        <div
                          className="input-group-prepend"
                        >
                          <span
                            className="input-group-text"
                          >
                            FR
                          </span>
                        </div>
                        <input
                          aria-label="Entrez titre d\\\\'\\\\u00E9quipe"
                          className="form-control"
                          id="nameFr"
                          onChange={[Function]}
                          placeholder="Entrez titre d'équipe"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionEn"
                      >
                        Description (English)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionEn"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="Describe your team..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <label
                        className=""
                        htmlFor="descriptionFr"
                      >
                        La description (Français)
                      </label>
                      <div
                        className="sc-bdVaJa eCtCIS"
                      >
                        <textarea
                          className="form-control"
                          id="descriptionFr"
                          maxLength={280}
                          onChange={[Function]}
                          placeholder="d'écris ton équipe..."
                          value=""
                        />
                        <div>
                          0
                           / 
                          280
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Save
                </button>
                <button
                  aria-label={null}
                  className="btn btn-secondary"
                  onClick={[Function]}
                  type="button"
                >
                  en_CA: Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LocalizedCreateTeamDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onSave
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onSave
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onCancel
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onCancel
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties CreateTeamDialog with defaults 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          CreateTeamDialog
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with defaults
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  />
  <div>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            LocalizedCreateTeamDialog
            " Component
          </h2>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onSave
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onSave
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  onCancel
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#170",
                      }
                    }
                  >
                    onCancel
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  isOpen
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span />
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
